--- a/index.yaml
+++ b/index.yaml
@@ -10,13 +10,13 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 267 times in query history.
+# Unused in query history -- copied from input.
 - kind: Entry
   properties:
   - name: date
     direction: desc
 
-# Used 202 times in query history.
+# Used 39 times in query history.
 - kind: Entry
   properties:
   - name: entrytype
@@ -31,14 +31,14 @@ indexes:
   - name: date
     direction: desc
 
-# Used 2 times in query history.
+# Unused in query history -- copied from input.
 - kind: Entry
   properties:
   - name: entrytype=
   - name: date
     direction: desc
 
-# Used 2 times in query history.
+# Unused in query history -- copied from input.
 - kind: Entry
   properties:
   - name: tags
